--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai": "^6.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.2",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.11"
   },
